--- a/test.ui
+++ b/test.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>STM32</string>
+   <string>GE Driver STM32 GUI</string>
   </property>
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
@@ -85,8 +85,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>190</y>
+     <x>50</x>
+     <y>170</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -98,8 +98,8 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>240</y>
+     <x>250</x>
+     <y>170</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -111,8 +111,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>200</y>
+     <x>90</x>
+     <y>210</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -124,8 +124,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>270</y>
+     <x>90</x>
+     <y>280</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -137,8 +137,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>200</y>
+     <x>160</x>
+     <y>210</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -150,8 +150,8 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>270</y>
+     <x>160</x>
+     <y>280</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -163,8 +163,8 @@
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>270</y>
+     <x>230</x>
+     <y>280</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -176,8 +176,8 @@
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>200</y>
+     <x>230</x>
+     <y>210</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -189,8 +189,8 @@
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>270</y>
+     <x>300</x>
+     <y>280</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -202,8 +202,8 @@
   <widget class="QLabel" name="label_11">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>200</y>
+     <x>300</x>
+     <y>210</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -215,8 +215,8 @@
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>290</y>
+     <x>450</x>
+     <y>170</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -228,8 +228,8 @@
   <widget class="QPushButton" name="pushButton_4">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>300</y>
+     <x>70</x>
+     <y>310</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -241,8 +241,8 @@
   <widget class="QPushButton" name="pushButton_5">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>300</y>
+     <x>190</x>
+     <y>310</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -319,8 +319,8 @@
   <widget class="QLabel" name="label_16">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>240</y>
+     <x>90</x>
+     <y>250</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -332,8 +332,8 @@
   <widget class="QLabel" name="label_17">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>240</y>
+     <x>160</x>
+     <y>250</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -345,8 +345,8 @@
   <widget class="QLabel" name="label_18">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>240</y>
+     <x>300</x>
+     <y>250</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -358,8 +358,8 @@
   <widget class="QLabel" name="label_19">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>240</y>
+     <x>230</x>
+     <y>250</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -371,21 +371,21 @@
   <widget class="QLabel" name="label_20">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>270</y>
-     <width>18</width>
+     <x>30</x>
+     <y>280</y>
+     <width>41</width>
      <height>12</height>
     </rect>
    </property>
    <property name="text">
-    <string>Hex</string>
+    <string>ADCHex</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_21">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>240</y>
+     <x>30</x>
+     <y>250</y>
      <width>54</width>
      <height>12</height>
     </rect>
@@ -434,6 +434,97 @@
    </property>
    <property name="text">
     <string>Disconnect</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_24">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>210</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Pin (w)</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_25">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>250</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>--</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_27">
+   <property name="geometry">
+    <rect>
+     <x>430</x>
+     <y>210</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Pout (w)</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_28">
+   <property name="geometry">
+    <rect>
+     <x>430</x>
+     <y>250</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>--</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_29">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>280</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>%</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_30">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>210</y>
+     <width>81</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Power factor</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_31">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>250</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>--</string>
    </property>
   </widget>
  </widget>
